# hardware-monitor

./: LICENSE  README.md  biome.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml  ci.yaml  publish.yaml
src/: App.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: get_hardware_data.rs  get_setting_data.rs  lib.rs  main.rs  windows_service.rs
src-tauri/src/commands/: config.rs  hardware.rs  mod.rs  windows_service.rs
src-tauri/src/enums/: hardware.rs
src-tauri/src/services/: graphic_service.rs  mod.rs  system_info_service.rs  window_menu_service.rs
src-tauri/src/utils/: color.rs  file.rs  formatter.rs  logger.rs  mod.rs  num.rs  tauri.rs  unit.rs
src/atom/: chart.ts  main.ts  ui.ts  useHardwareInfoAtom.ts  useSettingsAtom.ts
src/components/: ErrorFallback.tsx  LineChart.tsx  Sample.tsx
src/components/charts/: CustomLegend.tsx  DoughnutChart.tsx  LineChart.tsx  ProcessTable.tsx
src/components/modals/: SettingsSheet.tsx
src/components/ui/: button.tsx  select.tsx  sheet.tsx  slider.tsx  switch.tsx
src/consts/: chart.ts
src/hooks/: useDarkMode.ts  useHardwareData.ts  useTauriEventListener.ts
src/lib/components/: lineChart.svelte  sample.svelte
src/routes/: +layout.svelte  +page.svelte  Counter.svelte
src/routes/sverdle/: +page.server.ts  +page.svelte  game.test.ts  game.ts  reduced-motion.ts
src/services/: hardwareService.ts  settingService.ts
src/template/: Chart.tsx  Dashboard.tsx  ScreenTemplate.tsx  Settings.tsx  SettingsSheet.tsx  SideMenu.tsx  Usage.tsx
src/types/: chartType.ts  graphType.ts  hardwareDataType.ts  settingsType.ts  ui.ts
